Python - transform.resize() missing update for Mirror modifier? #38525

Closed
opened 2014-02-06 19:59:39 +01:00 by CodeManX · 6 comments
Member
Please refer to: http://blender.stackexchange.com/questions/6822/unexpected-result-when-using-transform-resize-api
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @CodeManX

Added subscriber: @CodeManX
Brecht Van Lommel self-assigned this 2014-02-12 17:00:57 +01:00

This issue was referenced by blender/blender-addons-contrib@f49e89fa37

This issue was referenced by blender/blender-addons-contrib@f49e89fa378cde3bae9020985ed6e55724ae1ae1

This issue was referenced by blender/blender@f49e89fa37

This issue was referenced by blender/blender@f49e89fa378cde3bae9020985ed6e55724ae1ae1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit blender/blender@f49e89fa37.

Closed by commit blender/blender@f49e89fa37.
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender-addons#38525
No description provided.