Fix T38525: missing update when running bpy.ops.transform.* from the console.